optimize: let the subNav ux better 1. add sticky css 2. let header cancel box-shadow when the subNav is stuck 3. fix the style for subNav

--- a/components/organisms/Header/Header.desktop.module.scss
+++ b/components/organisms/Header/Header.desktop.module.scss
@@ -10,10 +10,15 @@
   width: 100%;
   backdrop-filter: blur(16px);
   background-color: rgba(241, 242, 244, 0.8);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.08);
 
   @include tablet {
     display: none;
   }
+}
+
+.isSubNavStuck {
+  box-shadow: none;
 }
 
 .headerContent {
